--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
             <!--Контакты-->
             <ul class="header-contacts list">
                 <li>
-                    <a href="mailto:info@devstudio.com" class="link contacts-mail"><svg class="contact-icon" width="16px" height="12px">
-                     <use href="./images/icons.svg#icon-envelope"></use>
+                    <a href="mailto:info@devstudio.com" class="link contacts-mail">
+                        <svg class="contact-icon" width="16px" height="12px">
+                            <use href="./images/icons.svg#icon-envelope"></use>                                      
+                     
                     </svg>info@devstudio.com
                     </a>                  
                 </li>               
